vendored_parsers/tree-sitter-clojure/corpus/derefing_lit.txt
================================================================================
Simple Deref
================================================================================

@x

--------------------------------------------------------------------------------

(source
  (derefing_lit
    (sym_lit
      (sym_name))))

================================================================================
Deref of Call
================================================================================

@(ping y)

--------------------------------------------------------------------------------

(source
  (derefing_lit
    (list_lit
      (sym_lit
        (sym_name))
      (sym_lit
        (sym_name)))))
