vendored_parsers/tree-sitter-clojure/corpus/read_cond_lit.txt
================================================================================
Platform Reader Conditional
================================================================================

#?(:clj :clj
   :cljr :cljr
   :cljs :cljs)

--------------------------------------------------------------------------------

(source
  (read_cond_lit
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)))
