vendored_parsers/tree-sitter-clojure/corpus/sym_lit.txt
================================================================================
Simple Symbol
================================================================================

def

--------------------------------------------------------------------------------

(source
  (sym_lit (sym_name)))

================================================================================
Symbol with Prefix
================================================================================

clojure.string/blank?

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Division Symbol
================================================================================

/

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_name)))

================================================================================
Namespaced Division Symbol
================================================================================

clojure.core//

--------------------------------------------------------------------------------

(source
  (sym_lit
    (sym_ns)
    (sym_name)))

================================================================================
Division Symbol followed by delimiter
================================================================================

(+ - * /)

--------------------------------------------------------------------------------

(source
  (list_lit
    (sym_lit (sym_name))
    (sym_lit (sym_name))
    (sym_lit (sym_name))
    (sym_lit (sym_name))))
