vendored_parsers/tree-sitter-clojure/corpus/tagged_or_ctor_lit.txt
================================================================================
Tagged Literal
================================================================================

#uuid "00000000-0000-0000-0000-000000000000"

--------------------------------------------------------------------------------

(source
  (tagged_or_ctor_lit
    (sym_lit (sym_name))
    (str_lit)))

================================================================================
Constructor
================================================================================

#user.Fun [1 2]

--------------------------------------------------------------------------------

(source
  (tagged_or_ctor_lit
    (sym_lit (sym_name))
    (vec_lit
      (num_lit)
      (num_lit))))

================================================================================
Constructor Alternate
================================================================================

#user.Fun {:a 1 :b 2}

--------------------------------------------------------------------------------

(source
  (tagged_or_ctor_lit
    (sym_lit (sym_name))
    (map_lit
      (kwd_lit (kwd_name))
      (num_lit)
      (kwd_lit (kwd_name))
      (num_lit))))
