vendored_parsers/tree-sitter-clojure/corpus/var_quoting_lit.txt
================================================================================
Var Quoting a Symbol
================================================================================

#'my-sym

--------------------------------------------------------------------------------

(source
  (var_quoting_lit
    (sym_lit
      (sym_name))))

================================================================================
Var Quoting with Reader Conditional
================================================================================

#'#?(:clj my-sym :cljr your-sym :cljs their-sym)

--------------------------------------------------------------------------------

(source
  (var_quoting_lit
    (read_cond_lit
      (kwd_lit)
      (sym_lit
        (sym_name))
      (kwd_lit)
      (sym_lit
        (sym_name))
      (kwd_lit)
      (sym_lit
        (sym_name)))))
