vendored_parsers/tree-sitter-clojure/corpus/vec_lit.txt
================================================================================
Empty Vector
================================================================================

[]

--------------------------------------------------------------------------------

(source
  (vec_lit))

================================================================================
Vector with Numbers
================================================================================

[1 1 2 3 5 8]

--------------------------------------------------------------------------------

(source
  (vec_lit
    (num_lit)
    (num_lit)
    (num_lit)
    (num_lit)
    (num_lit)
    (num_lit)))

================================================================================
Vector with Different Types
================================================================================

[:a 1 'fun {:x 1 :y 2} #{}]

--------------------------------------------------------------------------------

(source
  (vec_lit
    (kwd_lit (kwd_name))
    (num_lit)
    (quoting_lit
      (sym_lit (sym_name)))
    (map_lit
      (kwd_lit (kwd_name))
      (num_lit)
      (kwd_lit (kwd_name))
      (num_lit))
    (set_lit)))
