vendored_parsers/tree-sitter-clojure/test/corpus/anon_fn_lit.txt
================================================================================
Empty Anonymous Function
================================================================================

#()

--------------------------------------------------------------------------------

(source
  (anon_fn_lit))

================================================================================
Anonymous Function
================================================================================

#(+ % 8)

--------------------------------------------------------------------------------

(source
  (anon_fn_lit
    (sym_lit (sym_name))
    (sym_lit (sym_name))
    (num_lit)))
