vendored_parsers/tree-sitter-clojure/test/corpus/meta_lit.txt
================================================================================
Symbol Metadata
================================================================================

^String []

--------------------------------------------------------------------------------

(source
  (vec_lit
    (meta_lit
      (sym_lit
        (sym_name)))))

================================================================================
Keyword Metadata
================================================================================

^:private {}

--------------------------------------------------------------------------------

(source
  (map_lit
    (meta_lit
      (kwd_lit
        (kwd_name)))))

================================================================================
String Metadata
================================================================================

^"gnarly" {}

--------------------------------------------------------------------------------

(source
  (map_lit
    (meta_lit
      (str_lit))))

================================================================================
Map Metadata
================================================================================

^{:x 0 :y 1} #{}

--------------------------------------------------------------------------------

(source
  (set_lit
    (meta_lit
      (map_lit
        (kwd_lit
          (kwd_name))
        (num_lit)
        (kwd_lit
          (kwd_name))
        (num_lit)))))

================================================================================
Reader Conditional Metadata
================================================================================

^#?(:clj "vanilla" :cljr "strawberry" :cljs "chocolate") []

--------------------------------------------------------------------------------

(source
  (vec_lit
    (meta_lit
      (read_cond_lit
        (kwd_lit
          (kwd_name))
        (str_lit)
        (kwd_lit
          (kwd_name))
        (str_lit)
        (kwd_lit
          (kwd_name))
        (str_lit)))))

================================================================================
Multiple Bits of Metadata
================================================================================

^:wake ^:sit ^:sleep #{}

--------------------------------------------------------------------------------

(source
  (set_lit
    (meta_lit
      (kwd_lit
        (kwd_name)))
    (meta_lit
      (kwd_lit
        (kwd_name)))
    (meta_lit
      (kwd_lit
        (kwd_name)))))

================================================================================
Tagged Literal Metadata
================================================================================

^#/(data) thing

--------------------------------------------------------------------------------

(source
  (sym_lit
    (meta_lit
      (tagged_or_ctor_lit
        (sym_lit
          (sym_name))
        (list_lit
          (sym_lit
            (sym_name)))))
    (sym_name)))

================================================================================
Evaling Literal Metadata
================================================================================

^#=(keyword "a") []

--------------------------------------------------------------------------------

(source
  (vec_lit
    (meta_lit
      (evaling_lit
        (list_lit
          (sym_lit
            (sym_name))
          (str_lit))))))
