vendored_parsers/tree-sitter-clojure/test/corpus/sym_val_lit.txt
================================================================================
Inf
================================================================================

##Inf

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (sym_lit
      (sym_name))))

================================================================================
-Inf
================================================================================

##-Inf

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (sym_lit
      (sym_name))))

================================================================================
NaN
================================================================================

##NaN

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (sym_lit
      (sym_name))))

================================================================================
Symbolic Value Literal with Evaling Literal
================================================================================

###=(identity NaN)

--------------------------------------------------------------------------------

(source
  (sym_val_lit
    (evaling_lit
      (list_lit
        (sym_lit
          (sym_name))
        (sym_lit
          (sym_name))))))
